:recycle: Fix Overflow Handling

--- a/src/modules/think/diagram-list/diagram-list.scss
+++ b/src/modules/think/diagram-list/diagram-list.scss
@@ -14,7 +14,7 @@
 .diagram-list-container {
   padding: 20px 60px;
   flex: 1;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /*
